@@ -1,3 +1,8 @@
+2009-03-05  Stef Walter  <stef@memberwebs.com>
+
+	* gkr/seahorse-gkr-add-keyring.c: Fix cancel button in add keyring
+	dialog. Fixes bug #574424
+
 2009-03-04  Stef Walter  <stef@memberwebs.com>
 
 	* src/seahorse-key-manager.c: Update GUI before showing window, to avoid
